@@ -1,7 +1,7 @@
 # build_cd.conf - configuration for Zentyal installer remastering
 
-ZINSTALLER_ADDRESS="Zentyal CD Image Automatic Signing Key <cdimage@zentyal.com>"
-ZINSTALLER_KEYID=B03DEC6F37769E5E
+ZINSTALLER_ADDRESS="Zentyal CD Image Automatic Signing Key (2019) <cdimage@zentyal.com>"
+ZINSTALLER_KEYID=A58B3C8A
 
 # This variable is filled by the init-build-dir.sh script
 BASE_DIR=              # all directories are relative to this path
