@@ -5,7 +5,7 @@
 ##
 
 # add zentyal repository
-d-i apt-setup/local0/repository string http://packages.zentyal.org/zentyal 6.1 main
+d-i apt-setup/local0/repository string http://packages.zentyal.org/zentyal 6.1 main extra
 d-i apt-setup/local0/key string http://keys.zentyal.org/zentyal-6.1-archive.asc
 
 # ignore error downloading key if not internet connection
